@@ -5,6 +5,15 @@ Changelog
 2.6dev (unreleased)
 ---------------------
 
+- loadContent only when AcquireCriteria is set True.
+  Do not override the text when it's False.
+  This fixes http://plone.org/products/easynewsletter/issues/4
+  [WouterVH]
+
+- Rename "refresh" into "Refresh aggregate body" to make more clear what it does.
+  Cfr. http://plone.org/products/easynewsletter/issues/4
+  [WouterVH]
+
 - Fix ENLIssue to avoid issue to be sent twice to same recipient.
   [numahell]
 
